# Panaversity

101_Modern Python/M1/: index.py
101_Modern Python/M3/dataclass-callable-generics/: 01_basic_dataclasses.py
201_Agentic-ai-basic-&-DACA-ai-first-dev/1_fundamentals/Classes/1_hello-world/: 1_hello-langchain.ipynb
201_Agentic-ai-basic-&-DACA-ai-first-dev/1_fundamentals/Classes/2_rag/: 2.1_rag.ipynb  2.2-rag.ipynb  3-Advance RAG.ipynb
201_Agentic-ai-basic-&-DACA-ai-first-dev/1_fundamentals/Classes/3_tool-calling/: 4-Function_calling.ipynb
201_Agentic-ai-basic-&-DACA-ai-first-dev/1_fundamentals/Classes/4_fine-tuning/: 5_fine-tuning.ipynb
201_Agentic-ai-basic-&-DACA-ai-first-dev/1_fundamentals/Classes/6_cursor-ide/calc/: pyproject.toml
201_Agentic-ai-basic-&-DACA-ai-first-dev/1_fundamentals/Classes/6_cursor-ide/calc/src/calc/: __init__.py  calculator.py
201_Agentic-ai-basic-&-DACA-ai-first-dev/1_fundamentals/Practise/Function-or-Tool-Calling/: function-calling.ipynb
201_Agentic-ai-basic-&-DACA-ai-first-dev/1_fundamentals/Practise/RAG/: 1_piaic-text.ipynb  2_open-ai-text.ipynb  2_open_ai_text.ipynb  3_audio-&-video.ipynb
201_Agentic-ai-basic-&-DACA-ai-first-dev/2_OpenAI SDK/Online/01-02_chainlit/basic/: chatbot.py  main.py  pyproject.toml  streaming.py  tools.py
201_Agentic-ai-basic-&-DACA-ai-first-dev/2_OpenAI SDK/Online/01-02_chainlit/basic/src/basic/: __init__.py
201_Agentic-ai-basic-&-DACA-ai-first-dev/2_OpenAI SDK/Online/01_chainlit/hello_chainlit/src/hello_chainlit/: chatbot.py
201_Agentic-ai-basic-&-DACA-ai-first-dev/2_OpenAI SDK/Online/02_chatbot/: pyproject.toml
201_Agentic-ai-basic-&-DACA-ai-first-dev/2_OpenAI SDK/Online/02_chatbot/src/02_chatbot/: __init__.py
201_Agentic-ai-basic-&-DACA-ai-first-dev/2_OpenAI SDK/Practise/2_hello-agent/: 01-OAI_SDK_Hello_world.ipynb  02_Global_Run_and_agent_Level_config.ipynb
201_Agentic-ai-basic-&-DACA-ai-first-dev/2_OpenAI SDK/Quiz-Prep/: readme.md
201_OpenAI SDK/Online/01_hello-chainlit/: notes.txt
201_OpenAI SDK/Online/01_hello-chainlit/class-01/: pyproject.toml
201_OpenAI SDK/Online/01_hello-chainlit/class-01/src/class_01/: __init__.py
201_OpenAI SDK/Online/01_hello-chainlit/hello_chainlit/: pyproject.toml
201_OpenAI SDK/Online/01_hello-chainlit/hello_chainlit/src/hello_chainlit/: chatbot.py
201_OpenAI SDK/Online/01_hello-chainlit/without-package/: pyproject.toml
201_OpenAI SDK/Online/02_chatbot/: .env  .env.example  .gitignore  README.md  setup_env.py
201_OpenAI SDK/Online/02_chatbot/src/02_chatbot/: agent.py  config.py
201_fundamentals/5_uv-&-litellm/litellm/project1/: pyproject.toml
201_fundamentals/5_uv-&-litellm/litellm/project1/src/project1/: main.py
201_fundamentals/5_uv-&-litellm/uv/project2/: pyproject.toml
201_fundamentals/5_uv-&-litellm/uv/project2/src/project2/khi/bahadurabad/: file.py
Modern Python/M1/: index.py
OpenAI SDK/Online/01_hello-chainlit/without-package/: hello.py
OpenAI SDK/Quiz-Prep/: readme.md
Quiz Prep/class-1/: .env  main.py  pyproject.toml
(+3 files in other folders)
