[project]
name = "02-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hasnain", email = "mhasnainr.415@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.19",
]

[project.scripts]
02-chatbot = "02_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
