[project]
name = "class-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hasnain", email = "mhasnainr.415@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
class-01 = "class_01:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
