[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hasnain", email = "mhasnainr.415@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.73.1",
]

[project.scripts]
project1 = "project1:main"
gemini1 = "project1.main:call_gemini"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
