[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hasnain", email = "mhasnainr.415@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
piaic = "project2:demo"
karachi = "project2.hello:myfunction"
area = "project2.khi.bahadurabad.file:working"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
