[project]
name = "calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hasnain", email = "mhasnainr.415@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=7.0.0"
]

[project.scripts]
calc = "calc:main"
test = "calc.calculator:run_calculator_tests"
demo = "calc.calculator:my_cal"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
