[project]
name = "basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hasnain", email = "mhasnainr.415@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.6.8",
    "openai-agents>=0.2.6",
]

[project.scripts]
basic = "basic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
